fix gap not considered by dnd

--- a/src/pages/task/kanban/styles.module.scss
+++ b/src/pages/task/kanban/styles.module.scss
@@ -21,6 +21,12 @@
   }
 }
 
+.cols {
+  gap: 0;
+  & > div {
+    padding-right: 1rem;
+  }
+}
 
 .add > div.menu {
   display: flex;
